# Arpeely.Block.Summarizer

./: .gitignore  README.md
plugin/: README.md  config.js  content.js  manifest.json  styles.css
server/app/: .env.example  README.md  main.py  pyproject.toml
server/app/api/: summarize_controller.py
server/app/infrastructure/: config.py  dependencies.py  logging_config.py
server/app/services/summarizer/: summarizer_service.py
server/app/services/summarizer/agent/: summarizer_agent.py
server/app/tests/: conftest.py  test_sanitization.py  test_summarize_endpoint.py
